# 115-pure

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.windsurf/docs/: 115-api-reference.md  oauth-pkce-flow.md
.windsurf/plans/: DEVELOPMENT_PLAN-cecf35.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: auth.rs  download.rs  lib.rs
src/api/: auth.ts  client.ts  files.ts  user.ts
src/components/files/: Breadcrumb.tsx  FileIcon.tsx  FileListView.tsx  Toolbar.tsx
src/components/layout/: Sidebar.tsx
src/components/ui/: Button.tsx  Input.tsx
src/hooks/: useAuth.ts  useFiles.ts
src/pages/: FilesPage.tsx  LoginPage.tsx
src/stores/: authStore.ts  fileStore.ts  transferStore.ts
src/types/: index.ts
src/utils/: format.ts  pkce.ts
